# piquassoboost

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  boson_sampling_benchmark.py  boson_sampling_calc_script.py  bs_test_with_losses.py  check_AVX.cmake  coding_conventions.md  conftest.py  permanent_benchmark.py  piquasso  pyproject.toml  pytest.ini  qubo_divided.py  qubotest.py  requirements.txt  scripts  setup.py  ston_bench.py  ston_calc.py  tests  threshold_comparison.py
DFE/: CMakeLists.txt  PermanentGlynnDFE.cpp  Random_Unitary.cpp  Random_Unitary.h  TorontonianDFE.cpp
cbenchmarks/: CMakeLists.txt  torontonian_flop_benchmark.cpp
cpiquasso/common/: CMakeLists.txt  numpy_interface.cpp
cpiquasso/common/source/: Config.h  PicComplex.hpp  PicComplexM.hpp  PicRealM.hpp  PicState.cpp  PicTypes.h  PicTypes.hpp  PicVector.hpp  SymmetrizationChecker.cpp  SymmetrizationChecker.h  common_functionalities.cpp  common_functionalities.h  dot.cpp  dot.h  matrix.cpp  matrix.h  matrix32.cpp  matrix32.h  matrix_base.hpp
cpiquasso/gaussian/: CMakeLists.txt  state.py  state_wrapper.cpp
cpiquasso/gaussian/source/: CGaussianState.cpp  CGaussianState.h  GaussianState_Cov.cpp  GaussianState_Cov.h  TorontonianUtilities.hpp  tasks_apply_to_C_and_G.cpp
cpiquasso/sampling/: BosonSamplingSimulator.py  Boson_Sampling_Utilities.py  Boson_Sampling_Utilities_wrapper.cpp  CMakeLists.txt  ChinHuhPermanentCalculator_Wrapper.hpp  PowerTraceHafnianRecursive_Wrapper.hpp  PowerTraceHafnian_Wrapper.hpp  PowerTraceLoopHafnianRecursive_Wrapper.hpp  PowerTraceLoopHafnian_Wrapper.hpp  Torontonian.py  TorontonianRecursive_wrapper.hpp  Torontonian_wrapper.cpp  Torontonian_wrapper.hpp  backend.py  circuit.py  state.py
cpiquasso/sampling/simulation_strategies/: CMakeLists.txt  GaussianSimulationStrategy.py  GaussianSimulationStrategyFast_wrapper.cpp  GaussianSimulationStrategy_wrapper.cpp  GeneralizedCliffordsSimulationStrategy.py  GeneralizedCliffordsSimulationStrategy_wrapper.cpp  ThresholdBosonSampling.py  ThresholdBosonSampling_wrapper.cpp
cpiquasso/sampling/source/: BruteForceHafnian.cpp  BruteForceHafnian.h  BruteForceLoopHafnian.cpp  BruteForceLoopHafnian.h  CChinHuhPermanentCalculator.cpp  CChinHuhPermanentCalculator.h  MPIActivityCommunicator.hpp  PowerTraceHafnian.cpp  PowerTraceHafnian.h  PowerTraceHafnianRecursive.cpp  PowerTraceHafnianRecursive.h  PowerTraceHafnianUtilities.cpp  PowerTraceHafnianUtilities.h  PowerTraceHafnianUtilities.hpp  PowerTraceLoopHafnian.cpp  PowerTraceLoopHafnian.h  PowerTraceLoopHafnianRecursive.cpp  PowerTraceLoopHafnianRecursive.h  Torontonian.cpp  Torontonian.h  TorontonianRecursive.cpp  TorontonianRecursive.h  TorontonianRecursive.hpp  TorontonianUtilities.cpp  TorontonianUtilities.h  TorontonianUtilities.hpp
ctests/: CMakeLists.txt  boson_sampling_speed.cpp  brute_force_hafnian_complex_matrix.cpp  brute_force_loop_hafnian_complex_matrix.cpp  common_functionalities.cpp  constants_tests.h  ctest_common_functionalities.cpp  determinant_testing.cpp  dot_stride.cpp  extract_corner.cpp  extract_rows.cpp  hafnian_complex_matrix.cpp  hafnian_recursive_complex_matrix.cpp  insert_transformed_cols.cpp  insert_transformed_rows.cpp  loop_hafnian_recursive_complex_matrix.cpp  matrix_helper.hpp  permanents_accuracy.cpp  permanents_speed.cpp  random_ctest.cpp  symmetrization_checker.cpp  torontonian.cpp  torontonian_recursive.cpp
piquasso/common/: CMakeLists.txt  PicState.pxd  PicTypes.pxd  __init__.py  dot.pxd  dot_wrapper.cpp  matrix.pxd  numpy_interface.h  numpy_interface.pxd  numpy_interface.pyx  tbb.pxd
piquasso/common/source/: PicState.h  PicTypes.cpp  PicTypes.h  PicVector.hpp  dependency_graph.h  dot.cpp  dot.h  matrix.cpp  matrix.h  matrix_base.hpp
piquasso/gaussian/: CMakeLists.txt  state_wrapper.cpp
piquasso/gaussian/source/: CGaussianState.cpp  CGaussianState.h  tasks_apply_to_C_and_G.cpp  tasks_apply_to_C_and_G.h  tasks_apply_to_C_and_G.pxd
piquasso/sampling/: Boson_Sampling_Utilities_wrapper.cpp  CMakeLists.txt
piquasso/sampling/simulation_strategies/: CMakeLists.txt  GeneralizedCliffordsSimulationStrategy_wrapper.cpp
piquasso/sampling/source/: CChinHuhPermanentCalculator.cpp  CChinHuhPermanentCalculator.h  PowerTraceHafnian.cpp  PowerTraceHafnian.h
piquassoboost/common/: CMakeLists.txt  dot_wrapper.cpp  numpy_interface.cpp  numpy_interface.h
piquassoboost/common/source/: Config.h  Config.h.in  PicComplex.hpp  PicComplexM.hpp  PicRealM.hpp  PicState.cpp  PicState.h  PicStateHash.cpp  PicStateHash.h  PicStateHash_base.hpp  PicState_base.hpp  PicTypes.cpp  PicTypes.hpp  PicVector.hpp  array_base.hpp  array_int.h  common_functionalities.cpp  common_functionalities.h  dependency_graph.cpp  dependency_graph.h  dot.cpp  dot.h  matrix.cpp  matrix.h  matrix32.cpp  matrix32.h  matrix8.cpp  matrix8.h  matrix_base.hpp  matrix_real.h  matrix_real16.h  n_aryGrayCodeCounter.cpp  n_aryGrayCodeCounter.h
piquassoboost/gaussian/: CMakeLists.txt  calculation_extension.cpp  calculations.py  simulator.py  state.py  state_wrapper.cpp
piquassoboost/gaussian/source/: CGaussianState.cpp  CGaussianState.h  CalculationHelpers.cpp  CalculationHelpers.h  GaussianState_Cov.cpp  GaussianState_Cov.h
piquassoboost/sampling/: BosonSamplingSimulator.py  Boson_Sampling_Utilities.py  Boson_Sampling_Utilities_wrapper.cpp  CMakeLists.txt  ChinHuhPermanentCalculator_Wrapper.hpp  GlynnPermanentCalculator_Wrapper.hpp  PowerTraceHafnianRecursive_Wrapper.hpp  PowerTraceHafnian_Wrapper.hpp  PowerTraceLoopHafnianRecursive_Wrapper.hpp  PowerTraceLoopHafnian_Wrapper.hpp  TorontonianRecursive_wrapper.hpp  Torontonian_wrapper.hpp  calculations.py  circuit.py  permanent_calculators_wrapper.cpp  simulator.py  state.py
piquassoboost/sampling/simulation_strategies/: CMakeLists.txt  GaussianSimulationStrategy.py  GaussianSimulationStrategyFast_wrapper.cpp  GaussianSimulationStrategy_wrapper.cpp  GeneralizedCliffordsBLossySimulationStrategy_wrapper.cpp  GeneralizedCliffordsBSimulationStrategy_wrapper.cpp  GeneralizedCliffordsBUniformLossesSimulationStrategy_wrapper.cpp  (+4 more)
(+179 files in other folders)
